fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,4 @@ body {
 html {
   background: url(/background.jpg) center center fixed no-repeat;
   background-size: cover;
-  overflow: hidden;
 }
